# mangyomi-application

./: .gitattributes  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  SHOWCASE.md  electron-builder.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: nightly.yml  release.yml
electron/: discord.ts  imageProxy.ts  logging.ts  main.ts  memoryMonitor.ts  preload.ts  store.ts  updater.ts
electron/anilist/: api.ts  auth.ts  index.ts
electron/backup/: importer.ts  jsonImporter.ts
electron/cache/: imageCache.ts
electron/database/: index.ts  schema.ts
electron/extensions/: installer.ts  loader.ts  types.ts
electron/ipc/: anilist.ts  app.ts  cache.ts  database.ts  discord.ts  export.ts  extensions.ts  index.ts  network.ts  settings.ts
electron/utils/: logger.ts
installer/: 7zS.sfx  build-installer.bat  index.html  package-lock.json  package-nsis.ps1  package-sfx.ps1  package.json  vite.config.ts  wrapper.nsi
installer/electron/: main.ts  preload.ts  types.d.ts
installer/src/: App.css  App.tsx  index.css
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: main.rs
scripts/: backup.proto  convert_backup.js  set-nightly-version.js
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: Icons.tsx  Logo.tsx
src/stores/: anilistStore.ts  appStore.ts  pendingImportStore.ts  sourceBehaviorStore.ts  updateStore.ts
src/utils/: debugLogger.ts  (+2 more)
(+65 files in other folders)
