[package]
name = "mangyomi-installer"
version = "2.5.18"
description = "Custom installer for Mangyomi"
authors = ["Mangyomi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sevenz-rust = { version = "0.6", default-features = false }
zip = "0.6"
winreg = "0.52"

[features]
custom-protocol = ["tauri/custom-protocol"]
